--- a/src/components/FeatureMovie.css
+++ b/src/components/FeatureMovie.css
@@ -91,4 +91,28 @@
     .featured{
         height: 90vh;
     }
+
+    .featured--name{
+        font-size: 40px;
+    }
+
+    .featured--info{
+        font-size: 16px
+    }
+
+    .featured--description{
+        font-size: 14px;
+        max-width: 100%;
+        margin-right: 30px;
+    }
+
+    .featured--buttons,
+    .featured--watchbutton,
+    .featured--mylistbutton{
+        font-size: 16px;
+    }
+    
+    .featured--genres{
+        font-size: 14px;
+    }
 }
